# fps-game

./: .gitignore  README.md  build-wasm.js  package-lock.json  package.json  webpack.config.js
src/js/: index.html  index.js
src/js/audio/: AudioManager.js
src/js/controls/: InputManager.js  PlayerController.js  PointerLockControls.js
src/js/core/: AssetManager.js  EventEmitter.js  GameEngine.js  GameLore.js  KeyBindings.js  PerformanceMonitor.js  PlayerMetrics.js  ThemeManager.js
src/js/entities/: Enemy.js  EnemyManager.js  EnemyTypes.js  Player.js  SimpleLevel.js
src/js/graphics/: AdvancedMaterials.js  HDEnvironment.js  HDMaterialManager.js  HDRLighting.js  HDSkybox.js  HDTextureLoader.js  LightingManager.js  ModelLoader.js  ParticleSystem.js  PostProcessingEffects.js  PostProcessingManager.js
src/js/level/: Level.js  LevelManager.js
src/js/missions/: MissionSystem.js  MissionTypes.js
src/js/multiplayer/: MultiplayerManager.js  MultiplayerServer.js
src/js/systems/: AISystem.js  CurrencySystem.js  PhysicsSystem.js  WeaponSystem.js
src/js/ui/: GameplaySettings.js  HUD.js  MissionUI.js  UIManager.js
src/js/wasm/: wasm-interface.js  wasm-loader-generated.js  wasm-loader.js
src/rust/: Cargo.toml
src/rust/src/: lib.rs  math.rs  physics.rs
src/rust/src/ai/: behavior_tree.rs  enemy_types.rs  mod.rs
