[package]
name = "fps-game-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "WebAssembly modules for FPS game"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Performance"
]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
nalgebra = "0.32.3"
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["wee_alloc"]
wee_alloc = ["dep:wee_alloc"]

[dependencies.wee_alloc]
version = "0.4.5"
optional = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1